--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -41,7 +42,16 @@
             </div>
         </div>
     </nav>
-    <h1 class="text-center mt-5">Welcome to Seven Seas Spa</h1>
+
+
+    <!-- Hero Section -->
+    <section class="hero-section d-flex align-items-center justify-content-center text-center">
+        <div class="container">
+            <h1 class="display-4 fw-bold mb-3">Relax, Rejuvenate, Renew</h1>
+            <p class="lead mb-4">We are dedicated to improving your overall wellbeing</p>
+            <a href="#" class="btn btn-light btn-lg">Contact Us</a>
+        </div>
+    </section>
     <!-- Bootstrap 5 JS Bundle (optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
