add testimonials and style it

--- a/index.html
+++ b/index.html
@@ -126,7 +126,45 @@
       </div>
     </section>
 
-
+    <!-- Testimonials Section -->
+    <section class="testimonials-section py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-4">Testimonials</h2>
+            <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="d-flex flex-column align-items-center">
+                            <img src="assets/images/headshot-1.png" alt="Emily R. Headshot" class="rounded-circle mb-3" width="80" height="80">
+                            <p class="fs-5 fst-italic mb-3 text-center">"Seven Seas Spa helped me find balance and peace in my busy life. Highly recommended!"</p>
+                            <span class="fw-bold">- John B.</span>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex flex-column align-items-center">
+                            <img src="assets/images/headshot-2.png" alt="Michael S. Headshot" class="rounded-circle mb-3" width="80" height="80">
+                            <p class="fs-5 fst-italic mb-3 text-center">"The yoga classes are amazing and the staff is so supportive."</p>
+                            <span class="fw-bold">- Priya K.</span>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex flex-column align-items-center">
+                            <img src="assets/images/headshot-3.png" alt="Priya K. Headshot" class="rounded-circle mb-3" width="80" height="80">
+                            <p class="fs-5 fst-italic mb-3 text-center">"I love the holistic approach to wellness. My health has improved so much!"</p>
+                            <span class="fw-bold">- Ugwe K.</span>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </section>
     
     
     <!-- Bootstrap 5 JS Bundle (optional) -->
