--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -165,8 +166,21 @@
             </div>
         </div>
     </section>
-    
-    
+
+    <!-- Footer Section -->
+    <footer class="footer-section py-3 mt-5">
+      <div class="container">
+        <div class="d-flex flex-column flex-md-row align-items-center justify-content-between">
+          <span class="footer-copyright mb-2 mb-md-0">&copy; 2022 Seven Seas Spa</span>
+          <div class="footer-icons">
+            <a href="#" class="footer-icon ms-3" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="footer-icon ms-3" aria-label="Twitter"><i class="bi bi-twitter"></i></a>
+            <a href="#" class="footer-icon ms-3" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="footer-icon ms-3" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- Bootstrap 5 JS Bundle (optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
