--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
+        <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#">
                 <img src="assets/images/logo.png" alt="Seven Seas Spa Logo" width="30" height="30" class="me-2">
                 Seven Seas Spa
